@@ -5,6 +5,7 @@ PostGIS 1.0.5CVS
 	- Fixed return code of shp2pgsql
 	- Fixed handling of trailing dots in dbf numerical attributes
 	- Schema aware postgis_proc_upgrade.pl, support for pgsql 7.2.1
+	- Fixed back-compatibility issue in loader (load of null shapefiles)
 
 PostGIS 1.0.4
 2005/09/09
